# trass-yew

./: Cargo.toml  LICENSE-MIT  README.md  index.scss
src/: app.rs
src/app/: gateway.rs  recommendations.rs
src/app/recommendations/: components.rs  data.rs
