[package]
name = "trass-yew"
version = "0.1.0"
edition = "2021"
description = "Yew UI for trass"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-bootstrap = {path="../yew-bootstrap/packages/yew-bootstrap/"}
# trass_core = { git = "https://github.com/skifzzz/trass-core.git" }

# log="0.4.17"
# env_logger="0.10.0"

# yew = "0.20"
wasm-bindgen = "0.2.84"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
yew-router = "0.17.0"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
gloo-net = "0.2.6"
getset = "0.1.2"
gloo-console = "0.2.3"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
